# AstrophysicsWithAPC

./: pyproject.toml
playground/: chap1.ipynb  chap1_数値計算法.ipynb  chap2.ipynb  chap2_彗星.ipynb  chap3_流星.ipynb  chap4_制限三体問題.ipynb  chap6_星の力学視差.ipynb  chap7_ポリトロープ.ipynb
src/astrophysics/calculation/: differential_equation.py
src/astrophysics/calculation/math/: integration.py
src/astrophysics/calculation/orbit/: restricted_three_body_problem.py
src/astrophysics/comet/: comet.py
src/astrophysics/equipotential/: equipotential_curve.py
src/astrophysics/meteorite/: meteorite.py
src/calculation/: differential_equation.py  integration.py
