[tool.poetry]
name = "astrophysicswithapc"
version = "0.1.0"
description = ""
authors = ["malibu-cola <ryhrys4269@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.3.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
